workshop03/bggapp/v1/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggappv1-deployment
  labels:
    name: bggappv1-deployment
    app: bggapp
    tier: backend
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      name: bggappv1-pod
      app: bggapp
      tier: backend
  template:
    metadata:
      name: bggappv1-pod
      labels:
        name: bggappv1-pod
        app: bggapp
        tier: backend
    spec:
      containers:
      - name: bggappv1-container
        image: stackupiss/bgg-backend:v1
        args: 
        - --prefix
        - /v1
        imagePullPolicy: IfNotPresent
        ports:
        - name: app-port
          containerPort: 3000
        readinessProbe:
          httpGet:
            path: /v1/healthz
            port: app-port
          timeoutSeconds: 5
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /v1/healthz
            port: app-port
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
