workshop03/bggapp/v1/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bggappv1-svc
  labels:
    name: bggappv1-svc
spec:
  type: ClusterIP
  selector:
    name: bggappv1-pod
    app: bggapp
    tier: backend
  ports:
    - protocol: TCP
      targetPort: 3000
      port: 80
