workshop03/bggapp/v1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bggappv1-ing
  labels:
    name: bggappv1-ing
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: default-backend-svc
      port:
        number: 3000
  rules:
  - host: bgg-144.126.241.155.nip.io
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: bggappv1-svc
            port:
              number: 80
